add backbone, underscore and wafwfy initial models

--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -2,10 +2,20 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title></title>
+    <title>wafwfy</title>
 </head>
 <body>
 <h1>wafwfy</h1>
 We are "fortunately" working for you
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<script src="/static/js/underscore-min.js"></script>
+<script src="/static/js/backbone-min.js"></script>
+<script src="/static/js/wafwfy.js"></script>
+
+<script id="story-item" type="text/template">
+    ciao
+</script>
+
 </body>
 </html>
