--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"a
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -8,13 +8,14 @@
 <h1>wafwfy</h1>
 We are "fortunately" working for you
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>-->
+<script src="/static/js/jquery.min.js"></script>
 <script src="/static/js/underscore-min.js"></script>
 <script src="/static/js/backbone-min.js"></script>
 <script src="/static/js/wafwfy.js"></script>
 
 <script id="story-item" type="text/template">
-    ciao
+   <%= name %>
 </script>
 
 </body>
