--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -3,20 +3,40 @@
 <html>
 <head>
     <title>wafwfy</title>
+	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
+	<!--<script src="/static/js/jquery.min.js"></script>-->
+	<script src="/static/js/underscore-min.js"></script>
+	<script src="/static/js/backbone-min.js"></script>
+	<script src="/static/js/wafwfy.js"></script>
+
+    <script id="story-item" type="text/template">
+        <td><%= name %></td>
+    </script>
+    <style type="text/css">
+        button.off {
+            opacity: 0.5;
+        }
+    </style>
 </head>
 <body>
 <h1>wafwfy</h1>
 We are "fortunately" working for you
 
-<!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>-->
-<script src="/static/js/jquery.min.js"></script>
-<script src="/static/js/underscore-min.js"></script>
-<script src="/static/js/backbone-min.js"></script>
-<script src="/static/js/wafwfy.js"></script>
 
-<script id="story-item" type="text/template">
-   <%= name %>
-</script>
+<table id="story-table" class="table-striped">
+<thead>
+<tr>
+    <td>
+        <button class="story-switch on" data-type="unscheduled" style="color:DodgerBlue">unscheduled</button>
+        <button class="story-switch on" data-type="accepted" style="color:LimeGreen">accepted</button>
+        <button class="story-switch on" data-type="unstarted" style="color:LightCoral">unstarted</button>
+        <button class="story-switch on" data-type="delivered" style="color:Orange">delivered</button>
+        <button class="story-switch on" data-type="started" style="color:MediumVioletRed">started</button>
+        <button class="story-switch on" data-type="finished" style="color:Peru">finished</button>
+    </td>
+</tr>
+</thead>
 
+</table>
 </body>
 </html>
