add current backlog

--- a/wafwfy/static/css/site.less
+++ b/wafwfy/static/css/site.less
@@ -64,3 +64,13 @@ body {
 .dropdown-container {
     //position: relative;
 }
+
+.clearfix {
+    display: block;
+    width: 0;
+    clear: both !important;
+}
+
+.pull-left {
+    float: left !important;
+}
