--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -21,8 +21,23 @@
 	<script src="/static/js/highcharts.js"></script>
 
     <script id="story-item" type="text/template">
-        <td class="<%= current_state %>"><%= name %></td>
+            <div class="avatar">
+                <img src="/avatar/<%= requested_by %>" />
+            </div>
+            <div class="reply pull-left">
+                <div class="text"><%= name %></div>
+            </div>
+            <div class="clearfix"></div>
     </script>
+
+        <!--<li class="metro-reply bg-color-blue">-->
+                <!--<div class="avatar"><img src="https://secure.gravatar.com/avatar/89a92f7bfd81cb52ecbbc6160710d691?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" /></div>-->
+                <!--<div class="reply">-->
+                    <!--<div class="date">01.01.2012</div>-->
+                        <!--<div class="author">armisael</div>-->
+                        <!--<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut nisi dolor, eget luctus lectus.</div>-->
+                    <!--</div>-->
+        <!--</li>-->
 
     <script id="single-box" type="text/template">
         <li data-row="<%= data-row %>" data-col="<%= data-col %>"
@@ -79,6 +94,59 @@
         <div id="scroll" class="metro-scroll">
             <div class="content clearfix" id="content">
                 <div class="metro-sections" style="margin-top: -50px;">
+
+                <div class="metro-section size3" id="section3">
+                    <h2>Any tiles</h2>
+                    <div class="tile tile-double-vertical">
+                    </div>
+                    <div class="tile tile-double bg-color-green">
+                        <div class="tile-calendar-event">
+                            <div class="event-date">
+                                <div class="event-date-num">01</div>
+                                <div class="event-date-month">JUNE</div>
+                            </div>
+                            <div class="event-data">
+                                <div class="title">All Things Digital</div>
+                                <div class="text">
+                                    Rancho Palos Verdes, CA
+                                    <br>8:00 AM - 5:00 PM
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="tile tile-double bg-color-yellow">
+                        <div class="tile-text">
+                            <h2>mattberg@live.com</h2>
+                            <p>RE: Wedding Announcement!</p>
+                            <p>Congratulations! I'm realy looking forward to celebrating with you all. Thanks for the ...</p>
+                        </div>
+                    </div>
+                    <div class="tile bg-color-pink">
+                        <div class="tile-calendar-event">
+                        <div class="event-date">
+                                                        <div class="event-date-num">01</div>
+                                                    </div>
+                                                    </div>
+                        <div class="tile-label">Velocity</div>
+                      </div>
+                      <div class="tile tile-double">
+                      </div>
+                      <!--<div class="tile bg-color-red">-->
+                    <!--<div class="tile-icon-large">-->
+                    <!--<img src="img/mail-128.png"/>-->
+                    <!--</div>-->
+                    <!--<div class="tile-label">Mail</div>-->
+                    <!--<div class="tile-counter">10</div>-->
+                    <!--</div>-->
+                </div>
+
+
+                <div class="metro-section size2" id="current">
+                    <h2>Sprint Backlog</h2>
+                    <ul class="metro-replies">
+                    </ul>
+                </div>
+
                     <!--<div class="metro-section size3" id="section1">-->
                         <!--<h2>Section Title<small>subtitle</small></h2>-->
                         <!--<div class="tile">-->
@@ -168,46 +236,8 @@
                         <!--</div>-->
                     <!--</div>-->
 
-                    <div class="metro-section size3" id="section3">
-                        <h2>Any tiles</h2>
-                        <div class="tile tile-double-vertical">
-                        </div>
-                        <div class="tile tile-double bg-color-green">
-                            <div class="tile-calendar-event">
-                                <div class="event-date">
-                                    <div class="event-date-num">01</div>
-                                    <div class="event-date-month">JUNE</div>
-                                </div>
-                                <div class="event-data">
-                                    <div class="title">All Things Digital</div>
-                                    <div class="text">
-                                        Rancho Palos Verdes, CA
-                                        <br>8:00 AM - 5:00 PM
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="tile tile-double bg-color-yellow">
-                            <div class="tile-text">
-                                <h2>mattberg@live.com</h2>
-                                <p>RE: Wedding Announcement!</p>
-                                <p>Congratulations! I'm realy looking forward to celebrating with you all. Thanks for the ...</p>
-                            </div>
-                        </div>
-                        <div class="tile bg-color-pink">
-                            <div class="tile-label">Mail</div>
-                            <div class="tile-counter">10</div>
-                          </div>
-                          <div class="tile tile-double">
-                          </div>
-                          <!--<div class="tile bg-color-red">-->
-                        <!--<div class="tile-icon-large">-->
-                        <!--<img src="img/mail-128.png"/>-->
-                        <!--</div>-->
-                        <!--<div class="tile-label">Mail</div>-->
-                        <!--<div class="tile-counter">10</div>-->
-                        <!--</div>-->
-                    </div>
+
+
 
                     <div class="metro-section size4">
                         <h2>Big tile</h2>
