--- a/wafwfy/static/css/site.less
+++ b/wafwfy/static/css/site.less
@@ -74,3 +74,33 @@ body {
 .pull-left {
     float: left !important;
 }
+
+.position-relative {
+    position: relative !important;
+}
+
+#fortunately {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+
+    transform:rotate(20deg);
+    -ms-transform:rotate(20deg); /* IE 9 */
+    -moz-transform:rotate(20deg); /* Firefox */
+    -webkit-transform:rotate(20deg); /* Safari and Chrome */
+    -o-transform:rotate(20deg); /* Opera */
+
+    font-weight: bold;
+    color: #C3325F;
+    margin-top: 11px;
+    margin-right: 10px;
+}
+
+#wafwfy-title {
+    margin-top: 20px;
+    span {
+        font-size: 16pt;
+        color: #555 !important;
+    }
+}
+
