--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -99,18 +99,19 @@
                     <h2>Any tiles</h2>
                     <div class="tile tile-double-vertical">
                     </div>
-                    <div class="tile tile-double bg-color-green">
-                        <div class="tile-calendar-event">
+                    <div class="tile tile-double bg-color-darken">
+                        <div class="tile-calendar-event position-relative">
                             <div class="event-date">
-                                <div class="event-date-num">01</div>
-                                <div class="event-date-month">JUNE</div>
+                                <div class="event-date-num">{{ day }}</div>
+                                <div class="event-date-month">{{ month }}</div>
                             </div>
-                            <div class="event-data">
-                                <div class="title">All Things Digital</div>
-                                <div class="text">
-                                    Rancho Palos Verdes, CA
-                                    <br>8:00 AM - 5:00 PM
-                                </div>
+                            <div id="wafwfy-title" class="event-data">
+                                <div class="title">We are
+                                    <span>f¿!#ing</span>
+                                    working for you</div>
+                               <div id="fortunately" class="title">
+                                   fortunately
+                               </div>
                             </div>
                         </div>
                     </div>
@@ -123,15 +124,15 @@
                     </div>
                     <div class="tile bg-color-pink">
                         <div class="tile-calendar-event">
-                        <div class="event-date">
-                                                        <div class="event-date-num">01</div>
-                                                    </div>
-                                                    </div>
+                            <div class="event-date">
+                                <div class="event-date-num">01</div>
+                            </div>
+                        </div>
                         <div class="tile-label">Velocity</div>
-                      </div>
-                      <div class="tile tile-double">
-                      </div>
-                      <!--<div class="tile bg-color-red">-->
+                    </div>
+                    <div class="tile tile-double">
+                    </div>
+                    <!--<div class="tile bg-color-red">-->
                     <!--<div class="tile-icon-large">-->
                     <!--<img src="img/mail-128.png"/>-->
                     <!--</div>-->
