styled 'general stuff'

--- a/wafwfy/static/css/site.less
+++ b/wafwfy/static/css/site.less
@@ -75,8 +75,22 @@ body {
     float: left !important;
 }
 
+.pull-right {
+    float: right !important;
+}
+
+.text-right {
+    text-align: right !important;
+}
+
 .position-relative {
     position: relative !important;
+}
+
+.position-absolute {
+    position: absolute !important;
+    top: 0;
+    left: 0;
 }
 
 #fortunately {
@@ -91,7 +105,7 @@ body {
     -o-transform:rotate(20deg); /* Opera */
 
     font-weight: bold;
-    color: #C3325F;
+    color: #BC1C48;
     margin-top: 11px;
     margin-right: 10px;
 }
@@ -104,3 +118,6 @@ body {
     }
 }
 
+.white {
+    color: white !important;
+}
