--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -96,8 +96,11 @@
                 <div class="metro-sections" style="margin-top: -50px;">
 
                 <div class="metro-section size3" id="section3">
-                    <h2>Any tiles</h2>
-                    <div class="tile tile-double-vertical">
+                    <h2>General Stuff</h2>
+                    <div class="tile tile-double-vertical bg-color-blueDark tile-text">
+                        <div class="tile-header white text-right" style="padding-top: 160px;">
+                            Velocity Chart
+                        </div>
                     </div>
                     <div class="tile tile-double bg-color-darken">
                         <div class="tile-calendar-event position-relative">
@@ -115,14 +118,13 @@
                             </div>
                         </div>
                     </div>
-                    <div class="tile tile-double bg-color-yellow">
+                    <div class="tile tile-double bg-color-greenLight">
                         <div class="tile-text">
-                            <h2>mattberg@live.com</h2>
-                            <p>RE: Wedding Announcement!</p>
-                            <p>Congratulations! I'm realy looking forward to celebrating with you all. Thanks for the ...</p>
+                        <div id="velocity-chart" class="position-absolute" style="width: 310px; height: 150px;">
+                        </div>
                         </div>
                     </div>
-                    <div class="tile bg-color-pink">
+                    <div class="tile bg-color-red">
                         <div class="tile-calendar-event">
                             <div class="event-date">
                                 <div class="event-date-num">01</div>
@@ -130,7 +132,9 @@
                         </div>
                         <div class="tile-label">Velocity</div>
                     </div>
-                    <div class="tile tile-double">
+                    <div class="tile">
+                    </div>
+                    <div class="tile bg-color-orange">
                     </div>
                     <!--<div class="tile bg-color-red">-->
                     <!--<div class="tile-icon-large">-->
