--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -21,13 +21,16 @@
 	<script src="/static/js/highcharts.js"></script>
 
     <script id="story-item" type="text/template">
-            <div class="avatar">
-                <img src="/avatar/<%= requested_by %>" />
-            </div>
-            <div class="reply pull-left">
-                <div class="text"><%= name %></div>
-            </div>
-            <div class="clearfix"></div>
+            <!--<div class="avatar">-->
+                <!--<img src="/avatar/<%= requested_by %>" />-->
+            <!--</div>-->
+            <!--<div class="reply pull-left">-->
+                <!--<div class="text"><%= name %></div>-->
+            <!--</div>-->
+            <!--<div class="clearfix"></div>-->
+        <div class="tile-text">
+            <%= name %>
+        </div>
     </script>
 
         <!--<li class="metro-reply bg-color-blue">-->
@@ -146,10 +149,14 @@
                 </div>
 
 
-                <div class="metro-section size2" id="current">
+                <div class="metro-section width-auto" id="current">
                     <h2>Sprint Backlog</h2>
-                    <ul class="metro-replies">
-                    </ul>
+                    <div>
+
+                    </div>
+                    <!--<ul class="metro-replies">-->
+<!---->
+                    <!--</ul>-->
                 </div>
 
                     <!--<div class="metro-section size3" id="section1">-->
