add 'dynamic' velocity

--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -134,7 +134,7 @@
                     <div class="tile bg-color-red">
                         <div class="tile-calendar-event">
                             <div class="event-date">
-                                <div class="event-date-num">01</div>
+                                <div class="event-date-num">{{ velocity }}</div>
                             </div>
                         </div>
                         <div class="tile-label">Velocity</div>
