--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -154,13 +154,16 @@
 
 
                 <div class="metro-section width-auto" id="current">
-                    <h2>Sprint Backlog</h2>
-                    <div>
-
-                    </div>
-                    <!--<ul class="metro-replies">-->
-<!---->
-                    <!--</ul>-->
+                    <h2>Sprint Backlog
+                        <span class="color-legend bg-color-white"></span>
+                        <span class="color-legend bg-color-blue"></span>
+                        <span class="color-legend bg-color-blueDark"></span>
+                        <span class="color-legend bg-color-orange"></span>
+                        <span class="color-legend bg-color-green position-relative overflow-hidden">
+                            <span class="color-legend bg-color-red half-color"></span>
+                        </span>
+                    </h2>
+                    <div></div>
                 </div>
 
                     <!--<div class="metro-section size3" id="section1">-->
