--- a/wafwfy/static/css/site.less
+++ b/wafwfy/static/css/site.less
@@ -152,3 +152,31 @@ body {
 .tile-magic.visible {
     margin-top: 0 !important;
 }
+
+.color-legend {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
+}
+
+.half-color {
+    transform:rotate(45deg);
+    -ms-transform:rotate(45deg); /* IE 9 */
+    -moz-transform:rotate(45deg); /* Firefox */
+    -webkit-transform:rotate(45deg); /* Safari and Chrome */
+    -o-transform:rotate(45deg); /* Opera */
+
+    position: absolute;
+    top: 5px;
+    left: 6px;
+    height: 30px;
+    width: 30px;
+}
+
+.overflow-hidden {
+    overflow: hidden;
+}
+
+.bg-color-white * {
+    color: #1C1C1C !important;
+}
