add dynamic chart

--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -91,7 +91,7 @@
         <div class="header" id="header">
             <div class="dropdown-container clearfix">
                 <a class="dropdown-toggle">
-                    <h1>Wafwfy</h1>
+                    <h1>wafwfy</h1>
                 </a>
             </div>
         </div>
