fix random and fix black h2 on black tile

--- a/wafwfy/static/css/site.less
+++ b/wafwfy/static/css/site.less
@@ -142,6 +142,7 @@ body {
         display: inline-block;
         float: right;
         font-size: 30pt !important;
+        color: #FFFFFF !important;
     }
     img {
         height: 55px !important;
