--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"a
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
@@ -86,7 +86,8 @@
                 <div class="metro-section size3" id="section3">
                     <h2>General Stuff</h2>
                     <div class="tile tile-double-vertical bg-color-blueDark tile-text">
-                        <div class="tile-header white text-right" style="padding-top: 160px;">
+                        <img id="gufo-ugolino" src="https://dl.dropbox.com/u/13479209/gufo.png" />
+                        <div class="tile-header white text-right" style="padding-top: 20px;">
                             Velocity Chart
                         </div>
                     </div>
