--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -234,10 +234,11 @@
 
 
                     <div class="metro-section size4">
-                        <h2>Big tile</h2>
-                        <div class="tile tile-quadro tile-triple-vertical">
+                        <h2>Epic's chart</h2>
+                        <div class="tile tile-quadro tile-triple-vertical bg-color-darken">
                             <div class="tile-text">
-                                <div id="tags-chart" style="width: 400px; height: 300px; margin: 0 auto; float:right;"></div>
+                                <div id="tags-chart" class="position-absolute" style="width: 630px; height: 470px;">
+                                </div>
                             </div>
                         </div>
                     </div>
