--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -234,7 +234,7 @@
 
 
                     <div class="metro-section size4">
-                        <h2>Epic's chart</h2>
+                        <h2>Epics chart</h2>
                         <div class="tile tile-quadro tile-triple-vertical bg-color-darken">
                             <div class="tile-text">
                                 <div id="tags-chart" class="position-absolute" style="width: 630px; height: 470px;">
