--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -4,7 +4,6 @@
 <head>
     <title>wafwfy</title>
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
-	<!--<script src="/static/js/jquery.min.js"></script>-->
 
     <link href="/static/css/metro.css" rel="stylesheet" />
     <link href="/static/css/site.less" rel="stylesheet/less" type="text/css" >
@@ -13,9 +12,9 @@
     <script src="/static/js/less-1.3.0.min.js"></script>
     <script src="/static/js/underscore-min.js"></script>
 	<script src="/static/js/backbone-min.js"></script>
-	<!--<script src="/static/js/jquery.gridster.js"></script>-->
-	<script src="/static/js/jquery.mousewheel.min.js"></script>
-	<script src="/static/js/metroui.js"></script>
+
+	<!--<script src="/static/js/jquery.mousewheel.min.js"></script>-->
+	<!--<script src="/static/js/metroui.js"></script>-->
 
 	<script src="/static/js/wafwfy.js"></script>
 	<script src="/static/js/highcharts.js"></script>
