--- a/wafwfy/static/css/site.less
+++ b/wafwfy/static/css/site.less
@@ -180,3 +180,11 @@ body {
   margin: 20px 25px;
   width: 100px;
 }
+.tile-text-center {
+  text-align: center;
+  em {
+    font-size: 20px;
+    line-height: 150px;
+    vertical-align: middle;
+  }
+}
