--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -3,6 +3,9 @@
 <html>
 <head>
     <title>wafwfy</title>
+    <link rel="icon" href="https://dl.dropbox.com/u/13479209/fav.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="https://dl.dropbox.com/u/13479209/fav.ico" type="image/x-icon" />
+
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.8.0/jquery.min.js"></script>
 
     <link href="/static/css/metro.css" rel="stylesheet" />
