add fancy fancy visualization for team strength

--- a/wafwfy/static/css/site.less
+++ b/wafwfy/static/css/site.less
@@ -188,3 +188,27 @@ body {
     vertical-align: middle;
   }
 }
+
+.strength-container {
+  margin: 20px 10px;
+
+  .strength-full {
+    background-image: url(../images/man-full.png);
+    background-position-y: bottom;
+    position: absolute;
+  }
+
+  .strength-hollow {
+    background-image: url(../images/man.png);
+    position: relative;
+  }
+
+  .strength {
+    background-size: 100% Auto;
+    background-repeat: no-repeat;
+    display: inline-block;
+    width: 20px;
+    height: 53px;
+    vertical-align: top;
+  }
+}
