--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -88,8 +88,12 @@
                         </div>
                         <div class="tile">
                             <div class="tile-calendar-event">
-                                <div class="event-date">
-                                    <div class="event-date-num">{{ team_strength }}</div>
+                                <div class="strength-container">
+                                    {% for strength in team_strength %}
+                                        <span class="strength strength-hollow">
+                                            <span class="strength strength-full" style="height: {{ strength }}%; top: {{ 100-strength }}%"></span>
+                                        </span>
+                                    {% endfor %}
                                 </div>
                             </div>
                             <div class="tile-label">Team Strength</div>
@@ -101,7 +105,7 @@
                                     <span class="event-date-month"> / {{ total_points }}</span>
                                 </div>
                             </div>
-                            <div class="tile-label">Iteration Points</div>
+                            <div class="tile-label">Sprint Points</div>
                         </div>
                     </div>
 
