move or mousewheel

--- a/wafwfy/templates/index.html
+++ b/wafwfy/templates/index.html
@@ -2,6 +2,8 @@
         "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
+    <meta name="viewport" content="height=device-height">
+
     <title>wafwfy</title>
     <link rel="icon" href="https://dl.dropbox.com/u/13479209/fav.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="https://dl.dropbox.com/u/13479209/fav.ico" type="image/x-icon" />
@@ -15,6 +17,7 @@
     <script src="/static/js/less-1.3.0.min.js"></script>
     <script src="/static/js/underscore-min.js"></script>
 	<script src="/static/js/backbone-min.js"></script>
+	<script src="/static/js/jquery.mousewheel.min.js"></script>
 
 	<script src="/static/js/wafwfy.js"></script>
 	<script src="/static/js/highcharts.js"></script>
@@ -146,52 +149,6 @@
                             <em>to come...</em>
                         </div>
                     </div>
-
-                    <!--<div class="metro-section size3">-->
-                        <!--<h2>Commit</h2>-->
-                        <!--<ul class="metro-replies">-->
-                            <!--<li class="metro-reply bg-color-blue">-->
-                                <!--<div class="avatar"><img src="https://secure.gravatar.com/avatar/89a92f7bfd81cb52ecbbc6160710d691?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" /></div>-->
-                                <!--<div class="reply">-->
-                                    <!--<div class="date">01.01.2012</div>-->
-                                    <!--<div class="author">armisael</div>-->
-                                    <!--<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut nisi dolor, eget luctus lectus.</div>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                            <!--<li class="metro-reply bg-color-red">-->
-                                <!--<div class="avatar"><img src="https://secure.gravatar.com/avatar/b96b85956f77049965e50714e6e87f77?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" /></div>-->
-                                <!--<div class="reply">-->
-                                    <!--<div class="date">01.01.2012</div>-->
-                                    <!--<div class="author">vad</div>-->
-                                    <!--<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut nisi dolor, eget luctus lectus.</div>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                            <!--<li class="metro-reply bg-color-yellow">-->
-                                <!--<div class="avatar"><img src="https://secure.gravatar.com/avatar/79bc4d28de5dcc3cd5e7f53209d7dae9?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" /></div>-->
-                                <!--<div class="reply">-->
-                                    <!--<div class="date">01.01.2012</div>-->
-                                    <!--<div class="author">micheledicosmo</div>-->
-                                    <!--<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut nisi dolor, eget luctus lectus.</div>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                            <!--<li class="metro-reply bg-color-green">-->
-                                <!--<div class="avatar"><img src="https://secure.gravatar.com/avatar/cfbc2d3c4cd89a07943a3979c87280e2?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" /></div>-->
-                                <!--<div class="reply">-->
-                                    <!--<div class="date">01.01.2012</div>-->
-                                    <!--<div class="author">nostalgiaz</div>-->
-                                    <!--<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut nisi dolor, eget luctus lectus.</div>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                            <!--<li class="metro-reply bg-color-orange">-->
-                                <!--<div class="avatar"><img src="https://secure.gravatar.com/avatar/6ca6ce18f1fc1747e54a45d9d5cb4515?s=140&d=https://a248.e.akamai.net/assets.github.com%2Fimages%2Fgravatars%2Fgravatar-user-420.png" /></div>-->
-                                <!--<div class="reply">-->
-                                    <!--<div class="date">01.01.2012</div>-->
-                                    <!--<div class="author">martino</div>-->
-                                    <!--<div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras ut nisi dolor, eget luctus lectus.</div>-->
-                                <!--</div>-->
-                            <!--</li>-->
-                        <!--</ul>-->
-                    <!--</div>-->
                 </div>
             </div>
         </div>
